# predicting-iron-production-with-rs-data

./: README.md  pyproject.toml
data/: predictions.csv  predictions.csv:Zone.Identifier  training_data.csv  training_data.csv:Zone.Identifier
notebooks/: Data_processing.ipynb  Feature_engineering.ipynb  Modelling.ipynb
src/: feature_engineering.py  logging_config.py  processing.py  utils.py
